# RpiSolArk

./: .gitignore  CODEBASE_ANALYSIS_PLAN.md  CPU_PROFILING_ANALYSIS.md  FREQUENCY_ANALYSIS.md  INSTALL_C_EXTENSION.md  ISSUES_AND_RECOMMENDATIONS.md  LCD1602.py  OPTCOUPLER_TROUBLESHOOTING_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  REVERSE_TUNNEL_SETUP.md  TEST_FILES_DOCUMENTATION.md  TODO.md  XVFB_SETUP.md  ZERO_CODE_UPDATES.md  agents.md  analyze_pulse_timing.py  button_handler.py  comprehensive_optocoupler_test.py  config.py  config.yaml  dashboard.py  data_logger.py  deploy.sh  diagnostic_frequency_data.csv  display.py  eventfd_stress_test.py  fast_frequency_example.py  fast_frequency_measurement.py  final_frequency_diagnostic.py  gil_safe_counter.py  gpio_event_counter.py  gpio_manager.py  gpio_toggle.py  hardware.py  health.py  health_check_reporter.py  health_check_server.py  health_monitor.py  id_ed25519.pub  (+59 more)
tests/: 12kw_ng_conversion.csv  16kw_guardian_startup.csv  16kw_vtwin_load.csv  20kw_ac_cycles.csv  20kw_guardian_fluctuation.csv  22kw_ng_startup.csv  22kw_startup_harmonics.csv  7.5kw_powerpact_meter.csv  8kw_pro_spikes.csv  aircooled_55load.csv  conftest.py  debug_0v_transition.sh  debug_gpio.py  debug_login.py  debug_pulse_test.py  detailed_analysis.py  diesel_gen_fluctuation_example.csv  frequency_data_extraction_summary.md  metric_analysis_summary.md  mock_gpiod.py  pulse_patterns.py  quick_gpio_test.py  test_60hz_config.py  test_backlight_control.py  test_comprehensive_pulse_methods.py  test_data_logger.py  test_error_handling.py  test_lcd_advanced.py  (+21 more)
(+1 files in other folders)
