[project]
name = "rpisolark-monitor"
version = "0.1.0"
description = "A sophisticated frequency monitoring system for Raspberry Pi that detects power source (Utility Grid vs Generator) by analyzing AC line frequency stability"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "allantools>=2024.6",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    # Hardware dependencies (optional - will gracefully degrade if not available)
    "RPi.GPIO>=0.7.1",
    "RPLCD>=1.4.0",
    "gpiod>=2.4.0",
    # Web automation dependencies
    "playwright>=1.56.0",
    "requests>=2.32.5",
    "flask>=3.1.2",
]

[project.optional-dependencies]
dev = [
    # Development dependencies (optional)
    "pytest>=9.0.1",
    "pytest-cov>=2.12.0",
    # Profiling tools
    "py-spy>=0.3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "*.py",
    "config.yaml",
]

